force-app/main/default/objects/Toggl_Webhook__c/Toggl_Webhook__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Toggl Webhook</label>
    <nameField>
        <displayFormat>TW-{0000}</displayFormat>
        <label>Toggl Webhook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toggl Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>