force-app/main/default/objects/Toggl_Webhook__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>