force-app/main/default/objects/Toggl_Webhook__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>