force-app/main/default/objects/Toggl_Webhook__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>project</fullName>
            </value>
            <value>
                <fullName>task</fullName>
            </value>
            <value>
                <fullName>project_user</fullName>
            </value>
            <value>
                <fullName>time_entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>