force-app/main/default/objects/Toggl_Webhook__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>created</fullName>
            </value>
            <value>
                <fullName>updated</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>