force-app/main/default/objects/Toggl_Webhook__c/fields/Last_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_ID__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Last Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>