force-app/main/default/objects/Toggl_Webhook__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>