force-app/main/default/objects/Toggl_Webhook__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <externalId>true</externalId>
    <label>Subscription ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>