force-app/main/default/objects/Toggl_Webhook__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>