force-app/main/default/objects/Toggl_Webhook__c/fields/Validated_At__c.field-meta.xml
<CustomField>
    <fullName>Validated_At__c</fullName>
    <description>DEPRECATED: 13-03-24 - Replaced by Timesheet Scheduler</description>
    <label>Validated At</label>
    <type>DateTime</type>
</CustomField>